[Task_2_3_1] Minimal working snake test